# MacSimus

./: BUILD.md  CMakeLists.txt  COMPLETION_REPORT.md  DISTRIBUTION_READY.md  GITHUB_RELEASE_GUIDE.md  GUI_PREVIEW.py  IMPLEMENTATION.md  LICENSE  MacSimus-Bridging-Header.h  PHASE4_REPORT.md  PHASE4_SUMMARY.md  PHASE5_DETAILS.md  README.md  RELEASE_CHECKLIST.sh  RELEASE_SUMMARY.md  STEPS.md  build.sh  build_app.sh  build_github_app.sh  eq_output.txt  package.sh  release_to_github.sh  test_phase5.swift  verify.sh
MacSimus.xcodeproj/: project.pbxproj
app/: AdvancedSettingsView.swift  AudioManager.swift  ContentView.swift  EQBandView.swift  EQCurveView.swift  MacSimusApp.swift  PresetManager.swift  PresetsView.swift  SystemAudioManager.swift  SystemAudioView.swift
audio/: AudioEngine.cpp  AudioEngine.h  AudioEngineWrapper.mm  VirtualAudioDevice.cpp  VirtualAudioDevice.h  VirtualAudioDeviceWrapper.mm  audio_test  system_audio_test  test_audio.cpp  test_system_audio.cpp
build_app/MacSimus.app/Contents/: Info.plist
build_app/MacSimus.app/Contents/MacOS/: MacSimus
build_app/MacSimus.app/Contents/Resources/: README.txt
dsp/: biquad.h  dsp_test  eq_engine.h  eq_test  main.cpp  utils.cpp  utils.h
github_release/: INSTALLATION.md  README.txt  RELEASE_NOTES.md
